--- a/public/NewFile.html
+++ b/public/NewFile.html
@@ -19,10 +19,11 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
-
+		<button onclick="addButton()">Add Button</button>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="static/js/bootstrap.min.js"></script>
+    <script src="Test.js"></script>
   </body>
 </html>
